# LionAuto

./: .env.example  .gitignore  MARKETPLACE_MODEL_AND_PHOTOS_API.md  README.md  copart.py  copart_login.py  copartparser.py  env.example  iaai.py  manheim.py  manheim_locations.json  pyproject.toml  pytest.ini  sessions.db  t.py
app/: database.py  main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  additional.py  admin.py  admin_marketplace.py  audit_logs.py  bot_sessions.py  calculator.py  debug.py  (+21 more)
app/calculator/: utils.py
app/core/: cache.py
app/db/: load_fixtures.py  models.py
app/enums/: auction_type.py  audit_action.py  bid_status.py  customer_status.py  deposit_status.py  document_type.py  notification_channel.py  notification_type.py  payment_method.py  transaction_status.py  transaction_type.py  two_factor_method.py
app/models/: __init__.py  audit_log.py  bid.py  bot_session.py  customer.py  customer_info.py  deposit.py  document.py  lead.py  lot.py  notification.py  refreshtoken.py  role.py  transaction.py  translate.py  two_factor_auth.py  user.py  user_auction.py  user_watchlist.py
app/schemas/: __init__.py  bot_session.py  common.py  customer.py  customer_info.py  deposit.py  document.py  lead.py  lot.py  notification.py  profile.py  role.py  transaction.py  translation.py  two_factor.py  user.py  watchlist.py
app/services/: __init__.py  admin_service.py  auth_service.py  copart.py  copart_controller.py  iaai.py  iaai_controller.py  init_service.py  lead_service.py  lot_service.py  translate_service.py
app/tasks/: __init__.py  account_validation.py  lot copy.py  lot.py
clamav/: Dockerfile.clamav  freshclam.conf
clamav/scripts/: clamav-entrypoint.sh
docker/: Dockerfile  Dockerfile.patchright  docker-compose.patchright.yml  docker-compose.yml  entrypoint.sh
migrations/: add_profile_deposits_notifications_2fa.sql  drop_translation_dublicates.sql  insert_color.sql  insert_status.sql  insert_translation.sql  update_translation.sql  update_translation_schema.sql  update_vehicle_type.sql
redis/: redis.conf
scripts/: docker_nuke.sh  enable_overcommit.sh  init-minio.sh
tests/: conftest.py  test_deposits.py  test_notifications.py  test_profile.py  test_services.py  test_transactions.py  test_two_factor.py
(+66 files in other folders)
