[tool.poetry]
name = "la-auction"
version = "0.1.0"
description = "Verify Documents and Store"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
tortoise-orm = "^0.25.0"
pydantic = {extras = ["dotenv", "email"], version = "^2.11.3"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
aiokafka = "^0.12.0"
python-multipart = "^0.0.20"
uvicorn = "^0.34.1"
asyncpg = "^0.30.0"
celery = {extras = ["redis"], version = "^5.5.1"}
boto3 = "^1.37.34"
typing-extensions = "^4.13.2"
phonenumbers = "^9.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.3.0"
loguru = "^0.7.3"
pydantic-settings = "^2.8.1"
confluent-kafka = "^2.9.0"
pillow = "^11.2.1"
clamd = "^1.0.2"
pypdf2 = "^3.0.1"
aioredis = "^2.0.1"
playwright = "^1.54.0"
zeep = "^4.3.2"
aiosqlite = "^0.21.0"
patchright = "^1.55.2"
httpx = "^0.28.1"
pydantic-extra-types = "^2.10.6"
aiocache = "^0.12.3"
aiofiles = "^25.1.0"
sqlalchemy = "^2.0.44"
aiosmtplib = "^5.0.0"
psycopg2-binary = "^2.9.11"
pytest = "^9.0.1"
pyotp = "^2.9.0"
qrcode = "^8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
